kubernetes/gateway/traefikDashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik

spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`traefik.talos.m1xxos.me`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
