kubernetes/gateway/whoamiRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http
  namespace: default
spec:
  parentRefs:
  - name: traefik
    sectionName: http
    kind: Gateway

  hostnames:
  - whoami.talos.m1xxos.me

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: whoami
      namespace: default
      port: 80
